[package]
name = "lsp_msg"
version = "0.1.0"
authors = ["Justin Simerly <justinsimerly1992@gmail.com>"]
edition = "2018"
description = "Language Server Protocol Messages"
license = "MIT"
repository = "https://github.com/jsim2010/lsp_msg"

[dependencies]
jsonrpc-core = "11.0.0"
lsp_msg_derive = "0.1.0"
serde = { version = "1.0.90", features = ["derive"] }
serde_repr = "0.1.3"
